testsuite/tests/typing-unboxed/test.ocaml.reference
external a : (int [@untagged]) -> unit = "a" "a_nat"
external b : (int32 [@unboxed]) -> unit = "b" "b_nat"
external c : (int64 [@unboxed]) -> unit = "c" "c_nat"
external d : (nativeint [@unboxed]) -> unit = "d" "d_nat"
external e : (float [@unboxed]) -> unit = "e" "e_nat"
type t = private int
external f : (t [@untagged]) -> unit = "f" "f_nat"
module M :
  sig
    external a : int -> (int [@untagged]) = "a" "a_nat"
    external b : (int [@untagged]) -> int = "b" "b_nat"
  end
Line 12, characters 2-71:
    external f : (int32 [@unboxed]) -> (int32 [@unboxed]) = "f" "noalloc"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The native code version of the primitive is mandatory when attributes [@untagged] or [@unboxed] are present
Line 4, characters 2-61:
    external a : float -> float = "a" "noalloc" "a_nat" "float"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Alert deprecated: [@@unboxed] + [@@noalloc] should be used instead of "float"
Line 5, characters 2-53:
    external b : float -> float = "b" "noalloc" "b_nat"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Alert deprecated: [@@noalloc] should be used instead of "noalloc"
Line 6, characters 2-51:
    external c : float -> float = "c" "c_nat" "float"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Alert deprecated: [@@unboxed] + [@@noalloc] should be used instead of "float"
Line 7, characters 2-45:
    external d : float -> float = "d" "noalloc"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Alert deprecated: [@@noalloc] should be used instead of "noalloc"
Line 15, characters 6-70:
  ......struct
    external f : int -> (int [@untagged]) = "f" "f_nat"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : int -> (int [@untagged]) = "f" "f_nat" end
       is not included in
         sig external f : int -> int = "f" "f_nat" end
       Values do not match:
         external f : int -> (int [@untagged]) = "f" "f_nat"
       is not included in
         external f : int -> int = "f" "f_nat"
Line 4, characters 6-70:
  ......struct
    external f : (int [@untagged]) -> int = "f" "f_nat"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : (int [@untagged]) -> int = "f" "f_nat" end
       is not included in
         sig external f : int -> int = "a" "a_nat" end
       Values do not match:
         external f : (int [@untagged]) -> int = "f" "f_nat"
       is not included in
         external f : int -> int = "a" "a_nat"
Line 4, characters 6-73:
  ......struct
    external f : float -> (float [@unboxed]) = "f" "f_nat"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : float -> (float [@unboxed]) = "f" "f_nat" end
       is not included in
         sig external f : float -> float = "f" "f_nat" end
       Values do not match:
         external f : float -> (float [@unboxed]) = "f" "f_nat"
       is not included in
         external f : float -> float = "f" "f_nat"
Line 4, characters 6-73:
  ......struct
    external f : (float [@unboxed]) -> float = "f" "f_nat"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : (float [@unboxed]) -> float = "f" "f_nat" end
       is not included in
         sig external f : float -> float = "a" "a_nat" end
       Values do not match:
         external f : (float [@unboxed]) -> float = "f" "f_nat"
       is not included in
         external f : float -> float = "a" "a_nat"
Line 6, characters 6-56:
  ......struct
    external f : int -> int = "f" "f_nat"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : int -> int = "f" "f_nat" end
       is not included in
         sig external f : int -> (int [@untagged]) = "f" "f_nat" end
       Values do not match:
         external f : int -> int = "f" "f_nat"
       is not included in
         external f : int -> (int [@untagged]) = "f" "f_nat"
Line 4, characters 6-56:
  ......struct
    external f : int -> int = "a" "a_nat"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : int -> int = "a" "a_nat" end
       is not included in
         sig external f : (int [@untagged]) -> int = "f" "f_nat" end
       Values do not match:
         external f : int -> int = "a" "a_nat"
       is not included in
         external f : (int [@untagged]) -> int = "f" "f_nat"
Line 4, characters 6-60:
  ......struct
    external f : float -> float = "f" "f_nat"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : float -> float = "f" "f_nat" end
       is not included in
         sig external f : float -> (float [@unboxed]) = "f" "f_nat" end
       Values do not match:
         external f : float -> float = "f" "f_nat"
       is not included in
         external f : float -> (float [@unboxed]) = "f" "f_nat"
Line 4, characters 6-60:
  ......struct
    external f : float -> float = "a" "a_nat"
  end..
Error: Signature mismatch:
       Modules do not match:
         sig external f : float -> float = "a" "a_nat" end
       is not included in
         sig external f : (float [@unboxed]) -> float = "f" "f_nat" end
       Values do not match:
         external f : float -> float = "a" "a_nat"
       is not included in
         external f : (float [@unboxed]) -> float = "f" "f_nat"
Line 4, characters 14-19:
  external g : (float [@untagged]) -> float = "g" "g_nat";;
                ^^^^^
Error: Don't know how to untag this type. Only int can be untagged
Line 1, characters 14-17:
  external h : (int [@unboxed]) -> float = "h" "h_nat";;
                ^^^
Error: Don't know how to unbox this type. Only float, int32, int64 and nativeint can be unboxed
Line 3, characters 13-25:
  external i : int -> float [@unboxed] = "i" "i_nat";;
               ^^^^^^^^^^^^
Error: Don't know how to unbox this type. Only float, int32, int64 and nativeint can be unboxed
Line 3, characters 21-26:
  external j : int -> (float [@unboxed]) * float = "j" "j_nat";;
                       ^^^^^
Error: The attribute '@unboxed' should be attached to a direct argument or result of the primitive, it should not occur deeply into its type
external k : int -> float = "k" "k_nat"
Line 4, characters 0-61:
  external l : float -> float = "l" "l_nat" "float" [@@unboxed];;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Cannot use "float" in conjunction with [@unboxed]/[@untagged]
Line 1, characters 0-62:
  external m : (float [@unboxed]) -> float = "m" "m_nat" "float";;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Cannot use "float" in conjunction with [@unboxed]/[@untagged]
Line 1, characters 0-55:
  external n : float -> float = "n" "noalloc" [@@noalloc];;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Cannot use "noalloc" in conjunction with [@@noalloc]
Line 3, characters 0-45:
  external o : (float[@unboxed]) -> float = "o";;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The native code version of the primitive is mandatory when attributes [@untagged] or [@unboxed] are present
Line 1, characters 0-45:
  external p : float -> (float[@unboxed]) = "p";;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The native code version of the primitive is mandatory when attributes [@untagged] or [@unboxed] are present
Line 1, characters 0-44:
  external q : (int[@untagged]) -> float = "q";;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The native code version of the primitive is mandatory when attributes [@untagged] or [@unboxed] are present
Line 1, characters 0-42:
  external r : int -> (int[@untagged]) = "r";;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The native code version of the primitive is mandatory when attributes [@untagged] or [@unboxed] are present
Line 1, characters 0-42:
  external s : int -> int = "s" [@@untagged];;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The native code version of the primitive is mandatory when attributes [@untagged] or [@unboxed] are present
Line 1, characters 0-45:
  external t : float -> float = "t" [@@unboxed];;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The native code version of the primitive is mandatory when attributes [@untagged] or [@unboxed] are present
type 'a b = B of 'a b b [@@unboxed]

